--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.wasdev.wlp.sample</groupId>
-    <artifactId>SumApp</artifactId>
+    <artifactId>sumapp</artifactId>
     <version>0.1.0</version>
     <packaging>war</packaging>
 
