--- a/deployment/sumapp-deploy.yml
+++ b/deployment/sumapp-deploy.yml
@@ -1,22 +1,23 @@
 apiVersion: apps/v1 
 kind: Deployment
 metadata:
-  name: $appname
+  name: bpatel-sumapp
+  namespace : coe
   labels:
-    app: $appname
+    app: bpatel-sumapp
 spec:
   selector:
     matchLabels:
-      app: $appname
+      app: bpatel-sumapp
   replicas: 1
   template:
     metadata:
       labels:
-        app: $appname
+        app: bpatel-sumapp
     spec:
       containers:
-      - name: $appname
-        image: $targetrepo/$appname
+      - name: bpatel-sumapp
+        image: optumera.icp:8500/coe/bpatel-sumapp
         imagePullPolicy: Always
         ports:
         - containerPort: 9080       
@@ -24,13 +25,14 @@ spec:
 apiVersion: v1        
 kind: Service
 metadata:
-  name: $appname
+  name: bpatel-sumapp
+  namespace : coe	  
   labels:
-    app: $appname
+    app: bpatel-sumapp
 spec:
   type: NodePort
   ports:
     - port: 80
       targetPort: 9080
   selector:
-   app: $appname
+   app: bpatel-sumapp
